<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cookit</string>
    <string name="make_recipe">Post Recipe</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_to_favourite">Add to favourite</string>
    <string name="action_remove_from_favourite">Remove from favourite</string>
    <string name="favourited">favourited</string>
    <string name="add">Add</string>
    <string name="set_image">set image</string>
     <string name="name">Name : </string>
    <string name="author">Author : </string>
    <string name="comment">Comment : </string>
    <string name="type">Type : </string>
    <string name="difficulty">Difficulty : </string>
    <string name="duration">Duration : </string>
    <string name="ingredients">Ingredients : </string>
    <string name="directions">Directions : </string>
    <string name="notes">Notes : </string>
    <string name="save">save</string>
    <string name="close">close</string>
    
    <string-array name="dish_types">
        <item>Any</item>
        <item>Appetizer</item>
        <item>Main dish</item>
        <item>Dessert</item>
    </string-array>
    
    <string-array name="dish_difficulty">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>
    

</resources>
