<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_search"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_add"
        android:title="@string/add"/>
    
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_refresh"/>
</menu>
